refactor: introduce annotation-driven chart-studies (#19)